--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       name="google-signin-client_id"
       content="870413778352-3vtpln31uiods5s2v0epiioj72i624k8.apps.googleusercontent.com"
     />
-    <title>Storeroom</title>
+    <title>EPPL Inventory</title>
   </head>
   <body>
     <div id="root"></div>
